src/ast/snapshots/lakonik__ast__parser__tests__parse_statement_snapshot@qwen3_~create=(create_for_me_a)_@hello.txt.snap
---
source: src/ast/parser.rs
expression: sentence
---
type: sentence
range:
  start:
    line: 0
    character: 0
  end:
    line: 0
    character: 42
vocative:
  type: vocative
  range:
    start:
      line: 0
      character: 0
    end:
      line: 0
      character: 5
  name: qwen3
verb:
  type: assignment
  range:
    start:
      line: 0
      character: 6
    end:
      line: 0
      character: 31
  name: create
  value: create for me a
parts:
  - type: filepath
    range:
      start:
        line: 0
        character: 33
      end:
        line: 0
        character: 42
    path: hello.txt
