src/ast/snapshots/lakonik__ast__parser__tests__parse_statement_snapshot@qwen3_~foobar=(create_for_me_a)_lorem.snap
---
source: src/ast/parser.rs
expression: sentence
---
type: sentence
range:
  start:
    line: 0
    character: 0
  end:
    line: 0
    character: 37
vocative:
  type: vocative
  range:
    start:
      line: 0
      character: 0
    end:
      line: 0
      character: 5
  name: qwen3
verb:
  type: assignment
  range:
    start:
      line: 0
      character: 7
    end:
      line: 0
      character: 13
  name: foobar
  value: create for me a
parts:
  - type: freeform
    range:
      start:
        line: 0
        character: 32
      end:
        line: 0
        character: 37
    text: lorem
