src/ast/snapshots/lakonik__ast__parser__tests__parse_statement_snapshot@qwen3_~foobar=(potato_things_hello)_lorem.snap
---
source: src/ast/parser.rs
expression: sentence
---
type: sentence
range:
  start:
    line: 0
    character: 0
  end:
    line: 0
    character: 41
vocative:
  type: vocative
  range:
    start:
      line: 0
      character: 0
    end:
      line: 0
      character: 5
  name: qwen3
verb:
  type: assignment
  range:
    start:
      line: 0
      character: 6
    end:
      line: 0
      character: 35
  name: foobar
  value: potato things hello
parts:
  - type: freeform
    range:
      start:
        line: 0
        character: 36
      end:
        line: 0
        character: 41
    text: lorem
